# Buyme

./: .gitignore  README.md  __init__.py  app.py  buyme_database.sql  db.py  pyproject.toml  requirements.txt
models/: user.py
routes/: auth.py  home.py  search.py
static/: style.css
templates/: base.html
templates/auth/: register.html
templates/home/: create_auction.html  index.html  user_profile.html
templates/search/: results.html
